# weather_term

./: COPYRIGHT  README.md  pyproject.toml
weather_term/: fetch_data.py  fetch_data_weather_gov.py
